bk_ida/gccida/c2/eval_subst
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3181:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3182:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3183:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3185:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3186:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3189:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // r8 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3194:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tta; // [rsp+8h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3195:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tt; // [rsp+8h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3196:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *ttb; // [rsp+8h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3198:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // [rsp+10h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3222:2: error: expected expression
 struct arg = arg->complex.imag; 
 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3225:2: error: expected expression
 struct arg = arg->vector.elements; 
 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3232:16: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v16 = build( ( tree_code)v10, tta, v29, v34, v18); 
               ^~~~~~~~~
               tree_cons
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3232:26: error: expected ')'
v16 = build( ( tree_code)v10, tta, v29, v34, v18); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3232:12: note: to match this '('
v16 = build( ( tree_code)v10, tta, v29, v34, v18); 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3255:16: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v16 = build( ( tree_code)v10, tt, v21, new0, v9); 
               ^~~~~~~~~
               tree_cons
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3255:26: error: expected ')'
v16 = build( ( tree_code)v10, tt, v21, new0, v9); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3255:12: note: to match this '('
v16 = build( ( tree_code)v10, tt, v21, new0, v9); 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3269:16: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v16 = build( ( tree_code)v10, ttb, v25, v26, v27); 
               ^~~~~~~~~
               tree_cons
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3269:26: error: expected ')'
v16 = build( ( tree_code)v10, ttb, v25, v26, v27); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3269:12: note: to match this '('
v16 = build( ( tree_code)v10, ttb, v25, v26, v27); 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/fold-const.c:3274:17: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v16 = build1( ( tree_code)v10, type, v15); 
                ^~~~~~~~~
                tree_cons
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/eval_subst/src/obj/fold-const.o] Error 1
